added data entry apis
